# pretix-event-person-forwarder

./: README.md  pydoc-markdown.yml  pyproject.toml  setup.py
.github/workflows/: integrationtest.yml  publish-to-pypi.yml  pull-request-checks.yml
docs/: mkdocs.yml  pretix_event_person_forwarder.md
docs/content/pretix_event_person_forwarder/: model.md
docs/superpowers/plans/: 2026-06-26-forwarder.md
docs/superpowers/specs/: 2026-06-26-forwarder-design.md
pretix_event_person_forwarder/: api.py  events.py  forwarder.py  model.py  orders.py  questions.py
tests/integrationtest/: bootstrap.py  setup_testdata.py  test_events.py  test_forwarder.py  test_orders.py  test_questions.py
tests/unittests/: test_api.py  test_events.py  test_forwarder.py  test_orders.py  test_questions.py
